src/App.css
/* TRAINING CSS */

.home {
  background-color: #89a8f1;
  padding: 20px;
  text-align: center;
  color: white;
  margin: -10px;
  height: 2000px;
  font-family: Arial;
}

.container {
  width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
    margin-top: -15px;
}

.row{
  display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

.colsmall {
  position: relative;
    width: 100%;
    min-height: 1px;
    padding-right: 15px;
    padding-left: 50px;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: 100%;
}

.circle {
  border: white solid 4px;
  display: block;
  height: 120px;
  width: 120px;
  line-height: 60px;
  margin: 50px;
  -moz-border-radius: 40%;
  border-radius: 50%;
  background-color: #89a8f1;
  color: white;
  text-align: center;
  font-size: 2em; 
}

.taname{
  margin-left: -60px;
  margin-top: -25px;
}

.taname button{
  margin-left: 100px;
  margin-top: 40px;
  height: 30px;
  line-height: 0px;
}

.tokenList {
  margin-top: 60px !important;
}

.balance {
  margin-top: 10px;
}

.header {
  margin-top: 25px;
  font-size: 40px;  
  text-align: center;
  color: #ECEFF1;
  margin-bottom:0px;
}

.list {
  margin: 30px;
}

table {
  border: 2px solid white;
  width: 80%;
  text-align: center;
  margin-left: 10%;
  padding: 40px;
  margin-top:20px;
  //padding-bottom: 20px;
}

tr.tableRow {
  margin-left: 0px;
  padding-top:30px;
}

th.cellEntry {
  padding-top: 20px;
}

li {
    padding: 10px;
    list-style-type : none;
}

button {
  color: #ECEFF1;
  border-color: #ECEFF1;
  overflow: hidden;
  padding: 10px;
  transition: border-color 0.3s, background-color 0.3s;
  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
  border: 3px solid;
  border-radius: 40px;
  font-weight: 600;
  letter-spacing: 2px;
  text-transform: uppercase;
  font-size: 14px;
  min-width: 150px;
  max-width: 250px;
  display: block;
  margin: 1em;
  background: none;
  vertical-align: middle;
  position: relative;
  z-index: 1;
}

/* PAGE */

body,
.pure-g [class*=pure-u] {
  font-family: 'Open Sans', sans-serif;
}

h1, h2, h3 {
  font-family: 'Oswald', 'Arial Narrow', sans-serif;
}

code {
  display: block;
  margin: 20px 0 15px 0;
  padding: 10px;
  background: #eee;
}

.container-old {
  box-sizing: border-box;
  width: 100%;
  padding: 45px 20px;
}

.pure-button-primary {
  background-color: #0c1a2b;
}

.pure-button-primary:hover {
  background-color: #233e5e;
}

.pure-form input[type="text"]:focus {
  border-color: #0c1a2b;
}

/* NAVBAR */

.navbar {
  position: fixed;
  padding: 5px;
  background: #0c1a2b;
  font-family: 'Oswald', 'Arial Narrow', sans-serif;
}

.navbar a {
  color: #fff;
}

.navbar a:active,
.navbar a:focus,
.navbar a:hover {
  background: #233e5e;
}

.navbar .pure-menu-heading {
  font-weight: bold;
  text-transform: none;
}

.navbar .navbar-right {
  float: right;
}

.navbar .uport-logo {
  height: 16px;
  margin-right: 10px;
}

